# university

./: README.md
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/: CHANGELOG.txt  CMakeLists.txt  DO_NOT_MODIFY.TXT  README.md  cdarray_imp.hpp  stack_imp.hpp  test_queue.cpp
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/01_tests_dnode/: 01
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/03_tests_list_iterator/: 02  03  04
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/04_tests_list_editing/: 00  01
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/06_list_algorithms/: 00  02b  03  05  08  09
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/08_tests_cdarray/: 01  04  06  08  09
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/09_tests_cdarray_fold_unfold/: 01  03
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/debug/: cmake_install.cmake  test_cdarray  test_list
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/debug/.cmake/api/v1/reply/: cache-v2-596058f43e7764e97908.json  codemodel-v2-774b1711bd6e9bcb8ea1.json  index-2024-03-13T17-22-18-0893.json  target-test_list-Debug-c3c29f0c12105a289c35.json
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/debug/.cmake/api/v1/reply.prev/: cache-v2-2e033d90b195c6a4d23c.json  cmakeFiles-v1-7aeab5ca737fdb4c2407.json  codemodel-v2-a163450e2dbadd98b30a.json  index-2024-03-11T19-34-31-0053.json  target-test_stack-Debug-f004677b8cff602c593b.json
2-EstructurasDeDatos-Cpp/Practica1-EstructurasLineales/linear_ds/debug/.qtc_clangd/.cache/clangd/index/: auto_ptr.h.8E36BE2C90FE0884.idx  features.h.839A4F3F7C9A4375.idx  functional.FDE92F222E75DA0C.idx  istream.EB625AB4C93A7FE5.idx  list.hpp.066576F39DE8B760.idx  list_imp.hpp.0D4F604BE91B340F.idx  ostream.531583231456CED7.idx  queue_imp.hpp.AD02EA8376CB5604.idx  shared_ptr.h.141EE349A4387F44.idx  shared_ptr_atomic.h.2CD99A9C2BA7E69B.idx  tuple.124C7AF4B4014B97.idx  (+7 more)
2-EstructurasDeDatos-Cpp/Practica2-BTree&KDTree/kdtree/binary_tree/: CHANGELOG.txt  CMakeLists.txt  btree.hpp
2-EstructurasDeDatos-Cpp/Practica2-BTree&KDTree/kdtree/pattern/: CHANGELOG.txt  CMakeLists.txt  README.md  pattern.cpp  pattern.hpp
2-EstructurasDeDatos-Cpp/Practica2-BTree&KDTree/kdtree/pattern/tests_pattern/: 00  09
2-EstructurasDeDatos-Cpp/Practica2-BTree&KDTree/kdtree/pattern/tests_pattern_arithmetic/: 03
2-EstructurasDeDatos-Cpp/Practica2-BTree&KDTree/kdtree/pattern/tests_pattern_dataset/: 05  06  07  08
2-EstructurasDeDatos-Cpp/Practica2-BTree&KDTree/kdtree/pattern/tests_pattern_distances/: 04
2-EstructurasDeDatos-Cpp/Practica3-AVLTree/: CMakeLists.txt  DO_NOT_MODIFY.TXT  all.sh  avltree.hpp  avltree_imp.hpp
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/: CMakeLists.txt  README.md  kruskal_algorithm.hpp  kruskal_algorithm_imp.hpp  prim_algorithm_imp.hpp  wgraph_traversals.hpp
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/02_test_bf/: 00  02
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/03_tests_ts/: 00
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/build-graph-Qt6-MinSizeRel/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/build-graph-Qt6-MinSizeRel/.cmake/api/v1/reply/: target-test_graph-MinSizeRel-8152ea79465b39cdc9f3.json
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/build-graph-Qt6-Profile/: CMakeCache.txt  cmake_install.cmake  qtcsettings.cmake
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/build-graph-Qt6-Profile/.cmake/api/v1/reply/: cache-v2-4dc6790c7181b99d2422.json  cmakeFiles-v1-81879e56b08bfe871f0f.json  index-2024-05-28T16-35-39-0476.json  target-graph-RelWithDebInfo-ba40e9e0c4568aa14994.json  target-test_graph-RelWithDebInfo-000483a2f9be105283ec.json
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/graph/: README.md  graph.hpp  graph_imp.hpp
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/graph/00_tests_vertex/: 00  02
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/graph/01_tests_edge/: 02
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/graph/02_tests_graph/: 01  04  08  10  12  17  18  19  20  21
2-EstructurasDeDatos-Cpp/Practica6-AlgoritmosRecorrido/graph/03_tests_graph_fold_unfold/: 03
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/: CMakeLists.txt  kdtree.cpp  test_kdtree.cpp
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/binary_tree/: btree_utils_imp.hpp
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/debug/: .ninja_deps  .ninja_log  CMakeCache.txt
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/debug/binary_tree/: test_btree_node
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/pattern/: test_pattern.cpp
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/pattern/tests_pattern/: 01  02
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/tests_create_kdtree/: 00  01
2-EstructurasDeDatos/Practica2-BTree&KDTree/kdtree/tests_find_nn_L1/: 00  02  04
2-EstructurasDeDatos/Practica6-AlgoritmosRecorrido/graph/: CHANGELOG.txt  CMakeLists.txt  allTest.sh  test_graph.cpp
2-EstructurasDeDatos/Practica6-AlgoritmosRecorrido/graph/00_tests_vertex/: 01
2-EstructurasDeDatos/Practica6-AlgoritmosRecorrido/graph/01_tests_edge/: 00  01
2-EstructurasDeDatos/Practica6-AlgoritmosRecorrido/graph/02_tests_graph/: 00  02  03  05  06  07  09  11  13  14  15  16  22  23  24  25
2-EstructurasDeDatos/Practica6-AlgoritmosRecorrido/graph/03_tests_graph_fold_unfold/: 00  01  02
2-POO-Cpp/P6/marketplace/src/client/: CMakeLists.txt
2-POO-Cpp/P6/marketplace/src/seller/: CMakeLists.txt  seller-main.cc
2-ProgOrientadaObj-Cpp/P4/marketplace/src/person/: CMakeLists.txt
2-ProgOrientadaObj-Cpp/P5/marketplace/src/product/: CMakeLists.txt
2-ProgOrientadaObj-Cpp/P6/marketplace/src/tv/: CMakeLists.txt
(+469 files in other folders)
